--- a/code/Makefile.common
+++ b/code/Makefile.common
@@ -79,7 +79,8 @@ USERPROG_H = ../userprog/addrspace.h\
 	../machine/mipssim.h\
 	../machine/translate.h\
 	../userprog/memorymanager.h\
-	../userprog/table.h
+	../userprog/table.h\
+	../userprog/synchconsole.h
 
 USERPROG_C = ../userprog/addrspace.cc\
 	../userprog/bitmap.cc\
@@ -90,10 +91,11 @@ USERPROG_C = ../userprog/addrspace.cc\
 	../machine/mipssim.cc\
 	../machine/translate.cc\
 	../userprog/memorymanager.cc\
-	../userprog/table.cc
+	../userprog/table.cc\
+	../userprog/synchconsole.cc
 
 USERPROG_O = addrspace.o bitmap.o exception.o progtest.o console.o machine.o \
-	mipssim.o translate.o memorymanager.o table.o
+	mipssim.o translate.o memorymanager.o table.o synchconsole.o
 
 VM_H = 
 VM_C = 
